# smart-warehouse-rtk

./: README.md  docker-compose.yml  init.sql  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py  security.py
backend/app/api/: auth.py  deps.py  hello.py  inventory.py  robots.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: __init__.py  auth.py  inventory.py  robots.py
backend/tests/: conftest.py  test_models_import.py
frontend/: .gitignore  README.md  eslint.config.js  index.css  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CsvUploadModal.tsx  Header.tsx  Navigation.tsx
frontend/src/config/: api.ts
frontend/src/features/: auth.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  LoginPage.tsx
frontend/src/styles/: global.css  theme.ts
frontend/src/types/: auth.ts
frontend/src/utilits/: api.ts
robot_emulator/: emulator.py
